--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -9,9 +9,9 @@
   <template>
     <style>
         :host {
-            --color-fuerte: green;
-            --color-claro: greenyellow;
-            --color-texto: white;
+            --color-fuerte: #1b6d37;
+            --color-claro: white;
+            --color-texto: black;
 
             --primary-text-color: var(--color-texto);
             --primary-background-color: var(--color-fuerte);
