--- a/src/pages/hnk-page.html
+++ b/src/pages/hnk-page.html
@@ -82,9 +82,8 @@
             </app-header-layout>
         </app-drawer-layout>
 
-        <hnk-spinner
-            mostrar="[[mostrarSpinner]]"
-        ></hnk-spinner>
+        <!--        <hnk-spinner mostrar ></hnk-spinner>-->
+                <hnk-spinner mostrar="[[mostrarSpinner]]" ></hnk-spinner>
     </template>
 
     <script>
