--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -11,7 +11,7 @@
         :host {
             --color-fuerte: #1b6d37;
             --color-claro: white;
-            --color-texto: black;
+            --color-texto: white;
 
             --primary-text-color: var(--color-texto);
             --primary-background-color: var(--color-fuerte);
