--- a/src/encuestas-heineken-app/encuestas-heineken-app.html
+++ b/src/encuestas-heineken-app/encuestas-heineken-app.html
@@ -45,9 +45,8 @@
         <iron-ajax id="ajaxUsuario" url="[[url]]" handle-as="json" on-response="_onResponseUsuarios" auto></iron-ajax>
 
         <hnk-page
+            id="pagina"
             usuario="[[usuario]]"
-            menu="[[menu]]"
-            menu-seleccionado="{{menuSeleccionado}}"
             mostrar-spinner="[[mostrarSpinner]]"
         >
             <iron-pages selected="[[routeData.view]]" attr-for-selected="name" on-iron-select="_onPageSelected">
@@ -68,7 +67,6 @@
                     usuario="[[usuario]]"
                     route="{{subroute}}"
                     cargando="{{mostrarSpinner}}"
-                    on-encuesta-changed="_onEncuestaChanged"
                 ></hnk-encuestas-page>
         </iron-pages>
         </hnk-page>
@@ -83,33 +81,17 @@
                 usuario: {
                     type: Object
                 },
-                menu: {
-                    type: Array,
-                    value: function () {
-                        return [];
-                    }
-                },
-                menuSeleccionado: Object,
                 url: String
             },
             ready: function() {
-                this.getConfig('menu')
-                        .then(function(menu) {
-                            this.menu = menu;
-                        }.bind(this))
-                        .catch(function() {
-                            console.error('No hay menú')
-                        }.bind(this));
                 this.getUrl(this, 'usuarios')
                         .then(function(url) {
                             this.url = url;
                         }.bind(this));
             },
             _onPageSelected: function(e, model) {
+                this.$.pagina.reiniciar();
                 model.item.reiniciar && model.item.reiniciar();
-            },
-            _onEncuestaChanged: function () {
-                this.menuSeleccionado = null;
             },
             _onResponseUsuarios: function(e, detail) {
                 this.usuario = e.detail.response[0];
