--- a/src/util/shared-styles.html
+++ b/src/util/shared-styles.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../paper-styles/default-theme.html">
 <link rel="import" href="../paper-styles/shadow.html">
 <link rel="import" href="../paper-styles/typography.html">
+<link rel="import" href="custom-style.html">
 
 <dom-module id="shared-styles">
   <template>
